Fixed whitespace for editbar

--- a/sass/_editbar.scss
+++ b/sass/_editbar.scss
@@ -9,7 +9,7 @@
   @include align-items(center);
   @include justify-content(flex-end);
 
-  padding: 8px 6px 0 0;
+  padding: 0 6px 0 0;
   right: 0;
 
   > li {
